// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frames Blackboxed Frames filters blackboxed frames 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "asyncCause": null,
          "displayName": "display-1",
          "generatedLocation": Object {
            "line": 4,
            "sourceId": "1",
          },
          "id": "1",
          "index": 0,
          "location": Object {
            "line": 4,
            "sourceId": "1",
          },
          "scope": Object {
            "actor": "scope-actor",
            "bindings": Object {
              "arguments": Array [],
              "variables": Object {},
            },
            "function": null,
            "object": null,
            "parent": null,
            "scopeKind": "",
            "type": "block",
          },
          "source": Object {
            "displayURL": Object {
              "filename": "source1",
              "group": "",
              "path": "source1",
              "search": "",
            },
            "extensionName": null,
            "id": "1",
            "isBlackBoxed": false,
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "relativeUrl": "source1",
            "thread": "FakeThread",
            "url": "source1",
          },
          "state": "on-stack",
          "this": Object {},
          "thread": "FakeThread",
          "type": "call",
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "asyncCause": null,
          "displayName": "display-1",
          "generatedLocation": Object {
            "line": 4,
            "sourceId": "1",
          },
          "id": "1",
          "index": 0,
          "location": Object {
            "line": 4,
            "sourceId": "1",
          },
          "scope": Object {
            "actor": "scope-actor",
            "bindings": Object {
              "arguments": Array [],
              "variables": Object {},
            },
            "function": null,
            "object": null,
            "parent": null,
            "scopeKind": "",
            "type": "block",
          },
          "source": Object {
            "displayURL": Object {
              "filename": "source1",
              "group": "",
              "path": "source1",
              "search": "",
            },
            "extensionName": null,
            "id": "1",
            "isBlackBoxed": false,
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "relativeUrl": "source1",
            "thread": "FakeThread",
            "url": "source1",
          },
          "state": "on-stack",
          "this": Object {},
          "thread": "FakeThread",
          "type": "call",
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "asyncCause": null,
          "displayName": "display-3",
          "generatedLocation": Object {
            "line": 4,
            "sourceId": "1",
          },
          "id": "3",
          "index": 0,
          "location": Object {
            "line": 4,
            "sourceId": "1",
          },
          "scope": Object {
            "actor": "scope-actor",
            "bindings": Object {
              "arguments": Array [],
              "variables": Object {},
            },
            "function": null,
            "object": null,
            "parent": null,
            "scopeKind": "",
            "type": "block",
          },
          "source": Object {
            "displayURL": Object {
              "filename": "source1",
              "group": "",
              "path": "source1",
              "search": "",
            },
            "extensionName": null,
            "id": "1",
            "isBlackBoxed": false,
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "relativeUrl": "source1",
            "thread": "FakeThread",
            "url": "source1",
          },
          "state": "on-stack",
          "this": Object {},
          "thread": "FakeThread",
          "type": "call",
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "asyncCause": null,
          "displayName": "display-1",
          "generatedLocation": Object {
            "line": 4,
            "sourceId": "1",
          },
          "id": "1",
          "index": 0,
          "location": Object {
            "line": 4,
            "sourceId": "1",
          },
          "scope": Object {
            "actor": "scope-actor",
            "bindings": Object {
              "arguments": Array [],
              "variables": Object {},
            },
            "function": null,
            "object": null,
            "parent": null,
            "scopeKind": "",
            "type": "block",
          },
          "source": Object {
            "displayURL": Object {
              "filename": "source1",
              "group": "",
              "path": "source1",
              "search": "",
            },
            "extensionName": null,
            "id": "1",
            "isBlackBoxed": false,
            "isExtension": false,
            "isOriginal": false,
            "isPrettyPrinted": false,
            "isWasm": false,
            "relativeUrl": "source1",
            "thread": "FakeThread",
            "url": "source1",
          },
          "state": "on-stack",
          "this": Object {},
          "thread": "FakeThread",
          "type": "call",
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Library Frames groups all the Webpack-related frames 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": "1-appFrame",
        }
      }
      frameworkGroupingOn={true}
      hideLocation={false}
      key="1-appFrame"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": "1-appFrame",
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Group
      copyStackTrace={[Function]}
      frameworkGroupingOn={true}
      group={
        Array [
          Object {
            "id": "2-webpackBootstrapFrame",
            "source": Object {
              "url": "webpack:///webpack/bootstrap 01d88449ca6e9335a66f",
            },
          },
          Object {
            "id": "3-webpackBundleFrame",
            "source": Object {
              "url": "https://foo.com/bundle.js",
            },
          },
          Object {
            "id": "4-webpackBootstrapFrame",
            "source": Object {
              "url": "webpack:///webpack/bootstrap 01d88449ca6e9335a66f",
            },
          },
          Object {
            "id": "5-webpackBundleFrame",
            "source": Object {
              "url": "https://foo.com/bundle.js",
            },
          },
        ]
      }
      key="2-webpackBootstrapFrame"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": "1-appFrame",
        }
      }
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Library Frames selectable framework frames 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 2,
          "library": "back",
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 3,
          "library": "back",
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Library Frames selectable framework frames 2`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={true}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Group
      copyStackTrace={[Function]}
      frameworkGroupingOn={true}
      group={
        Array [
          Object {
            "id": 2,
            "library": "back",
          },
          Object {
            "id": 3,
            "library": "back",
          },
        ]
      }
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={true}
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Library Frames toggling framework frames 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 2,
          "library": "back",
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 3,
          "library": "back",
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Library Frames toggling framework frames 2`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={true}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Group
      copyStackTrace={[Function]}
      frameworkGroupingOn={true}
      group={
        Array [
          Object {
            "id": 2,
            "library": "back",
          },
          Object {
            "id": 3,
            "library": "back",
          },
        ]
      }
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={true}
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Supports different number of frames disable frame truncation 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 2,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 3,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 4,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="4"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 5,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="5"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 6,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="6"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 7,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="7"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 9,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="9"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 10,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="10"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 11,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="11"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 12,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="12"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 13,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="13"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 14,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="14"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 15,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="15"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 16,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="16"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 17,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="17"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 18,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="18"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 19,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="19"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 20,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="20"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Supports different number of frames empty frames 1`] = `
<div
  className="pane frames"
>
  <div
    className="pane-info empty"
  >
    Not paused
  </div>
</div>
`;

exports[`Frames Supports different number of frames one frame 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Supports different number of frames passes the getFrameTitle prop to the Frame component 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "displayName": "renderFoo",
          "id": 1,
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
      frameworkGroupingOn={false}
      getFrameTitle={[Function]}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
</div>
`;

exports[`Frames Supports different number of frames toggling the show more button 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 2,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 3,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 4,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="4"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 5,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="5"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 6,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="6"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 7,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="7"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 9,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="9"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      disableContextMenu={false}
      frame={
        Object {
          "id": 10,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="10"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[Function]}
    />
  </div>
  <div
    className="show-more-container"
  >
    <button
      className="show-more"
      onClick={[Function]}
    >
      Collapse rows
    </button>
  </div>
</div>
`;
